Fixed some of the styling on mobile

--- a/client/src/scss/components/_form.scss
+++ b/client/src/scss/components/_form.scss
@@ -32,7 +32,7 @@
 	// width: 28rem;
 	flex-direction: column;
 	// max-width: 32rem;
-	padding: 2rem;
+	// padding: 2rem;
 	// box-shadow: $bs_deep;
 	// background-color: $theme_color_form;
 	// border-radius: $br_small_containers;
